--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor</title>
 </head>
+
 <body>
     <h1>Let's play Rock Papaer Scissor</h1>
+    <script src="./app.js" defer></script>
 </body>
-<script src="./app.js"></script>
+
 </html>
